erDiagram
    %% ========================================
    %% MODERATION & TRUST SYSTEM - ER DIAGRAM
    %% ========================================
    
    %% Users (existing table, extended relationships)
    users {
        int id PK
        string name
        string email
        string password
        string bio
        string skills
        string profileImage
        enum role
        boolean isActive
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Posts (existing table)
    posts {
        int id PK
        int authorId FK
        string title
        string content
        string image
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Comments (existing table)
    comments {
        int id PK
        int postId FK
        int authorId FK
        string content
        int parentCommentId FK
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Reports (enhanced)
    reports {
        int id PK
        int reporterId FK
        int reportedUserId FK
        int reportedPostId FK
        int reportedCommentId FK
        enum severity
        enum status
        enum flagType
        string reason
        string description
        array evidenceUrls
        boolean isDuplicate
        int duplicateOfId FK
        boolean autoGenerated
        int moderationCaseId FK
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Moderation Cases
    moderation_cases {
        int id PK
        string caseNumber UK
        string title
        string description
        enum priority
        enum state
        int assignedModeratorId FK
        boolean escalatedToAdmin
        int escalatedAdminId FK
        boolean autoGenerated
        timestamp createdAt
        timestamp updatedAt
        timestamp resolvedAt
    }
    
    %% Moderator Actions
    moderator_actions {
        int id PK
        int moderationCaseId FK
        int moderatorId FK
        enum actionType
        string actionDetails
        int targetUserId FK
        string targetContentType
        int targetContentId
        int durationDays
        int trustScoreChange
        boolean isAutomatic
        string systemReason
        timestamp createdAt
    }
    
    %% Trust Scores
    trust_scores {
        int id PK
        int userId FK
        int overallScore
        enum trustLevel
        int contentQualityScore
        int communityEngagementScore
        int reliabilityScore
        timestamp lastCalculatedAt
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% User Flags
    user_flags {
        int id PK
        int userId FK
        string flagType
        enum severity
        boolean isActive
        boolean autoGenerated
        timestamp expiresAt
        string reason
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Content Flags
    content_flags {
        int id PK
        string contentType
        int contentId
        enum flagType
        int confidenceScore
        boolean isActive
        boolean reviewedByModerator
        boolean autoGenerated
        string aiModelVersion
        timestamp createdAt
        timestamp updatedAt
    }
    
    %% Appeals
    appeals {
        int id PK
        int moderationCaseId FK
        int appellantUserId FK
        int originalActionId FK
        string appealReason
        string appealDescription
        array evidenceUrls
        enum status
        int reviewedByModeratorId FK
        string reviewNotes
        string finalDecision
        timestamp createdAt
        timestamp updatedAt
        timestamp resolvedAt
    }
    
    %% Moderation Logs
    moderation_logs {
        int id PK
        string logType
        int userId FK
        int moderationCaseId FK
        int actionId FK
        int reportId FK
        int appealId FK
        jsonb details
        inet ipAddress
        string userAgent
        string sessionId
        timestamp createdAt
    }
    
    %% ========================================
    %% RELATIONSHIPS
    %% ========================================
    
    %% User relationships
    users ||--o{ reports : "reporter"
    users ||--o{ reports : "reported_user"
    users ||--o{ moderation_cases : "assigned_moderator"
    users ||--o{ moderation_cases : "escalated_admin"
    users ||--o{ moderator_actions : "moderator"
    users ||--o{ moderator_actions : "target_user"
    users ||--|| trust_scores : "has_trust_score"
    users ||--o{ user_flags : "has_flags"
    users ||--o{ appeals : "appellant"
    users ||--o{ appeals : "reviewing_moderator"
    users ||--o{ moderation_logs : "user_activity"
    
    %% Content relationships
    posts ||--o{ reports : "reported_post"
    comments ||--o{ reports : "reported_comment"
    posts ||--o{ content_flags : "flagged_content"
    comments ||--o{ content_flags : "flagged_content"
    
    %% Moderation workflow relationships
    reports ||--o{ moderation_cases : "belongs_to"
    reports ||--o{ reports : "duplicate_of"
    moderation_cases ||--o{ moderator_actions : "has_actions"
    moderation_cases ||--o{ appeals : "appealed_against"
    moderator_actions ||--o{ appeals : "original_action"
    
    %% Logging relationships
    moderation_cases ||--o{ moderation_logs : "case_logs"
    moderator_actions ||--o{ moderation_logs : "action_logs"
    reports ||--o{ moderation_logs : "report_logs"
    appeals ||--o{ moderation_logs : "appeal_logs"
    
    %% Content flag relationships
    content_flags }o--|| posts : "flags_post"
    content_flags }o--|| comments : "flags_comment"
    
    %% ========================================
    %% CONSTRAINTS & BUSINESS RULES
    %% ========================================
    
    reports {
        chk_target_at_least_one: "At least one target (user/post/comment) required"
        chk_severity_valid: "Severity must be LOW, MEDIUM, HIGH, or CRITICAL"
        chk_status_valid: "Status must be PENDING, UNDER_REVIEW, RESOLVED, DISMISSED, or ESCALATED"
    }
    
    moderation_cases {
        chk_case_number_unique: "Case number must be unique (auto-generated)"
        chk_state_valid: "State must be OPEN, ASSIGNED, IN_PROGRESS, PENDING_REVIEW, RESOLVED, or CLOSED"
        chk_priority_valid: "Priority must match severity enum"
    }
    
    moderator_actions {
        chk_suspension_duration: "USER_SUSPENSION requires positive duration_days"
        chk_trust_change_range: "trust_score_change within reasonable bounds"
    }
    
    trust_scores {
        chk_score_range: "All scores 0-100"
        chk_level_valid: "Trust level must be valid enum value"
    }
    
    content_flags {
        chk_confidence_range: "Confidence score 0-100"
        chk_content_type_valid: "Content type must be 'post' or 'comment'"
    }
    
    appeals {
        chk_status_valid: "Status must be SUBMITTED, UNDER_REVIEW, APPROVED, DENIED, or ESCALATED"
        chk_appellant_not_moderator: "Appellant cannot be the reviewing moderator"
    }
    
    %% ========================================
    %% INDEXES (for performance)
    %% ========================================
    
    REPORTS_INDEXES {
        idx_reports_status_severity: "status, severity"
        idx_reports_reported_user: "reported_user_id"
        idx_reports_created_at: "created_at DESC"
        idx_reports_case: "moderation_case_id"
    }
    
    CASES_INDEXES {
        idx_cases_state_priority: "state, priority"
        idx_cases_moderator: "assigned_moderator_id"
        idx_cases_created_at: "created_at DESC"
    }
    
    TRUST_INDEXES {
        idx_trust_level: "trust_level"
        idx_trust_overall: "overall_score"
        idx_trust_updated: "updated_at DESC"
    }
    
    LOGS_INDEXES {
        idx_logs_type: "log_type"
        idx_logs_created_at: "created_at DESC"
        idx_logs_case: "moderation_case_id"
    }
